Fix button centering on iphone
For some reason, physical iPhones are not centering the text inside the map buttons correctly. (`48`, `AK`, `HI`, `PR`)

Playing with mono spaced fonts before trying svg buttons.

--- a/client/src/components/territoryFocusControl.module.scss
+++ b/client/src/components/territoryFocusControl.module.scss
@@ -14,15 +14,15 @@
 .territoryFocusContainer {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  font-size: 16px;
-  line-height: 1.75em;
   position: absolute;
   left: 20px;
-  top: 300px;
-  z-index: 10;
-  left: 20px;
   top: 150px;
+  z-index: 10;
+
+  text-align: center;
+  // @include u-font-size('mono', 8);  doesn't work because we're in component scss
+  font-size: font-size('mono', 'sm');
+  line-height: 1.5rem;
 }
 
 .territoryFocusButton:first-child {
